@@ -52,6 +52,7 @@ import static com.google.common.collect.Iterables.filter;
 import static com.google.common.collect.Iterables.transform;
 import static java.util.Comparator.naturalOrder;
 import static java.util.Comparator.reverseOrder;
+import static org.apache.cassandra.config.CassandraRelevantProperties.BTREE_FAN_FACTOR;
 import static org.apache.cassandra.utils.btree.BTree.iterable;
 import static org.apache.cassandra.utils.Clock.Global.currentTimeMillis;
 import static org.junit.Assert.assertEquals;
@@ -190,7 +191,7 @@ public class LongBTreeTest
                             {
                                 Map<Integer, Integer> update = new LinkedHashMap<>();
                                 for (Integer i : selection.testKeys)
-                                    update.put(i, new Integer(i));
+                                    update.put(i, Integer.valueOf(i));
 
                                 CountingFunction function = new CountingFunction((x) -> x);
                                 Object[] original = selection.testAsSet.tree();
@@ -210,7 +211,7 @@ public class LongBTreeTest
                             {
                                 Map<Integer, Integer> update = new LinkedHashMap<>();
                                 for (Integer i : selection.testKeys)
-                                    update.put(i, new Integer(i));
+                                    update.put(i, Integer.valueOf(i));
 
                                 CountingFunction function = new CountingFunction((x) -> update.getOrDefault(x, x));
                                 Object[] original = selection.testAsSet.tree();
@@ -230,7 +231,7 @@ public class LongBTreeTest
                             {
                                 Map<Integer, Integer> update = new LinkedHashMap<>();
                                 for (Integer i : selection.testKeys)
-                                    update.put(i, new Integer(i));
+                                    update.put(i, Integer.valueOf(i));
 
                                 CountingFunction function = new CountingFunction(update::get);
                                 Object[] original = selection.testAsSet.tree();
@@ -249,7 +250,7 @@ public class LongBTreeTest
                             {
                                 Map<Integer, Integer> update = new LinkedHashMap<>();
                                 for (Integer i : selection.testKeys)
-                                    update.put(i, new Integer(i));
+                                    update.put(i, Integer.valueOf(i));
 
                                 CountingFunction function = new CountingFunction((x) -> update.containsKey(x) ? null : x);
                                 Object[] original = selection.testAsSet.tree();
@@ -1135,7 +1136,7 @@ public class LongBTreeTest
         for (String arg : args)
         {
             if (arg.startsWith("fan="))
-                System.setProperty("cassandra.btree.fanfactor", arg.substring(4));
+                BTREE_FAN_FACTOR.setString(arg.substring(4));
             else if (arg.startsWith("min="))
                 minTreeSize = Integer.parseInt(arg.substring(4));
             else if (arg.startsWith("max="))
