@@ -83,7 +83,7 @@ public class BTreeUpdateBench extends BTreeBench
         setup(2 * (dataSize + insertSize));
         data2 = data.clone();
         for (int i = 0 ; i < data2.length ; ++i)
-            data2[i] = new Integer(data2[i]);
+            data2[i] = Integer.valueOf(data2[i]);
     }
 
     @State(Scope.Thread)
